banners/banners-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banners-server-deployment
  namespace: banner
  labels:
    app: banners-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banners-server
  template:
    metadata:
      labels:
        app: banners-server
    spec:
      containers:
      - name: banners-server
        image: yakovda/banner-server:1.0.0
        ports:
        - containerPort: 5000
