banners/banners-client-ex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banners-client-service-external
  namespace: default
spec:
  type: ExternalName
  externalName: banners-client-service.banner.svc.cluster.local
  ports:
    - port: 80
