banners/banners-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banners-client-service
spec:
  selector:
    app: banners-client
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
