banners/banners-server-ex-sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: banners-server-service-external
  namespace: default
spec:
  type: ExternalName
  externalName: banners-server-service.banner.svc.cluster.local
  ports:
    - port: 5000
