banners/banners-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banners-server-service
  namespace: banner
spec:
  selector:
    app: banners-server
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
