banners/banners-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banners-ingress
spec:
  rules:
  - host: a78ce6e9dbace422e9ddf578d52be2de-1214614456.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:  
            name: banners-server-service
            port:  
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banners-client-service
            port:
              number: 80
